--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,42 +3,83 @@
 
 
 .header{
-    min-height: 100%;
-    .name_container{
-        display: flex;
-        flex-direction: column;        
-        align-items: center;
-        .torka{
-            color:color(secondary);
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    flex-direction: column;
+    nav{
+        margin-top: 20px;
+        ul{
             display: flex;
-            justify-content: center;
-            font-size: 50px;
-            font-family: 'Mrs Saint Delafield', cursive;            
-            .firstName{
-                &::first-letter {
-                    font-size: 1.5em;
-                  }
+            align-items: center;
+            justify-content: space-around;
+            li{
+                
+                list-style: none;
+                a{
+                    text-transform: uppercase;
+                    width: 150px;
+                    text-align: center;
+                }
+                .link_menu{
+                    color: #827864;
+                    font-family: 'Arimo', sans-serif;
+                    text-decoration: none;
+                    display: none;
+                }
+                @include tablet(){
+                }
+                @include desktop(){
+                    .link_menu{
+                        display: block;
+                    }
+                }
+                .logo{
+                    #logo_img{
+                        width: 150px;
+                        height: auto;
+                    }
+                }
             }
-            .lastName{
-                margin-left: 10px;
-                &::first-letter {
-                    font-size: 1.5em;
-                  }
-            }
-        }
-        .skill{
-            color:color(alternBg);
-            font-family: 'Cormorant Garamond', serif;
-            margin-top: -40px;
-            text-transform: uppercase;
         }
     }
-    .galery{
-        position: relative;        
-        overflow: hidden;
-        #imagen1{                      
+    .phrase{
+        margin-top: 30px;
+        color: #827864;
+            
+        p{
+            font-family: 'Cormorant Infant', serif;
+            // font-weight: 300;
+            font-size: 35px;
+            text-transform: uppercase;
+            text-align: center;
+            line-height: 1;
+            padding: 0 10%;
+        }
+        .little_phrase{
+
+            font-family: 'Arimo', sans-serif;
+            text-transform: uppercase;
+            font-weight: 100;
+            display: block;
+            margin: 20px 0;
+            text-align: center;
+            font-size: 12px;
+        }
+    }
+    .mainImg_container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        #mainImg{
             width: 100%;
             height: auto;
+            @include tablet(){
+                width: 90%;
+            }
+            @include desktop(){
+                width: 80%;
+            }
         }
     }
 }
