--- a/src/Assets/css/_colorPage.scss
+++ b/src/Assets/css/_colorPage.scss
@@ -1,11 +1,7 @@
 $tablet:768px;
 $desktop:1200px;
 $colors:(
-    alternBg:#595859,
-    bg2:#838C74,
-    bg1:#BFB8AA,
-    main:#D9D9D9,
-    secondary:#0D0D0D
+    mainText:#827864
 );
 
 @mixin tablet{
