--- a/src/components/MainView/MainView.scss
+++ b/src/components/MainView/MainView.scss
@@ -1,4 +1,5 @@
 @import "../../Assets/css/colorPage";
 .main{
-    background-color:#f8f7f4;    
+    background-color:#f8f7f4; 
+    padding-bottom: 100px;   
 }
