--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,8 +7,8 @@
     // justify-content: center;
     // align-items: center;
     flex-direction: column;
+    padding-top: 20px;
     nav{
-        margin-top: 20px;
         ul{
             display: flex;
             align-items: center;
