--- a/src/components/MainView/MainView.scss
+++ b/src/components/MainView/MainView.scss
@@ -1,5 +1,6 @@
 @import "../../Assets/css/colorPage";
 .main{
-    background-color:#f8f7f4; 
+    background-color:color(bg); 
     padding-bottom: 100px;   
+    // max-width: 1800px;
 }
