--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .App {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  background-color: #fffef1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
