FIX Contact Component

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -117,9 +117,9 @@
                 font-size: 17px;
                 display: flex;
                 align-items: center;
-                justify-content: flex-start;
+                justify-content: center;
                 flex-direction: column;
-
+                text-align: center;
                 span:nth-child(2){
                     font-size: 25px;
                     font-weight: bold;
