--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -115,8 +115,9 @@
   font-size: 17px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  flex-direction: column; }
+  justify-content: center;
+  flex-direction: column;
+  text-align: center; }
 
 .contact .whatssapp .link .msg_whats span:nth-child(2) {
   font-size: 25px;
