Gallery and Modal view

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,6 +1,10 @@
 .contact {
   padding: 10%; }
 
+@media (min-width: 768px) {
+  .contact {
+    padding: 0% 20%; } }
+
 .contact .mail_container {
   display: flex;
   flex-direction: column; }
