--- a/src/components/ImageModal/ImageModal.css
+++ b/src/components/ImageModal/ImageModal.css
@@ -5,6 +5,24 @@
   top: 15px;
   position: absolute; }
 
+.change_img {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  top: 50%;
+  padding: 0 10px;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.change_img .icon_change_img {
+  font-size: 25px;
+  cursor: pointer; }
+
+.image_container {
+  user-select: none; }
+
 .image_container .img_modal {
   max-width: 100%;
   max-height: 95vh; }
