--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,83 +1,99 @@
 .Gallery {
   margin-top: 50px;
-  padding: 10%;
-  color: #827864;
+  color: #827864; }
+
+.Gallery .gallery_title h1 {
+  font-family: 'Cormorant Infant', serif;
+  font-weight: bold;
+  font-size: 80px;
+  text-transform: uppercase; }
+
+@media (min-width: 1200px) {
+  .Gallery .gallery_title h1 {
+    font-size: 65px; } }
+
+.Gallery .gallery_options_item {
+  margin-top: 40px;
+  overflow: hidden; }
+
+.Gallery .gallery_options_item_container_img {
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer; }
+
+.Gallery .gallery_options_item_container_img .gallery_bg_img {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 100%;
+  width: 100%;
+  transition: filter,transform 0.7s; }
+
+.Gallery .gallery_options_item_container_img:hover .gallery_bg_img {
+  filter: grayscale(100%);
+  transform: scale(1.1); }
+
+.Gallery .gallery_options_item_container_img:hover .show_gallery path {
+  animation: svgAnimation 0.7s linear forwards; }
+
+.Gallery .gallery_options_item_container_img .gallery_bg_volcan {
+  background-image: url("../../Assets/images/gallery/volcan.jpg"); }
+
+.Gallery .gallery_options_item_container_img .gallery_bg_people {
+  background-image: url("../../Assets/images/gallery/people.jpg"); }
+
+.Gallery .gallery_options_item_container_img .gallery_bg_street {
+  background-image: url("../../Assets/images/gallery/palacio.jpg"); }
+
+.Gallery .gallery_options_item_container_img .show_gallery {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+
+.Gallery .gallery_options_item_container_img .show_gallery svg {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+
+.Gallery .gallery_options_item_container_img .show_gallery path {
+  fill: transparent;
+  stroke-width: 10;
+  stroke: none;
+  stroke-dasharray: 1765;
+  stroke-dashoffset: 0; }
+
+.Gallery .gallery_options_item_description {
+  padding: 5%; }
+
+.Gallery .gallery_options_item_description .title {
+  color: black; }
+
+.Gallery .gallery_options .img_center .gallery_options_item_container_img {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center; }
-  .Gallery .gallery_title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; }
-    .Gallery .gallery_title h1 {
-      font-family: 'Cormorant Infant', serif;
-      font-weight: 300;
-      font-size: 40px;
-      text-transform: uppercase; }
-      @media (min-width: 1200px) {
-        .Gallery .gallery_title h1 {
-          font-size: 65px; } }
-    .Gallery .gallery_title .category {
-      margin: 40px 0;
-      font-family: 'Arimo', sans-serif;
-      text-transform: uppercase;
-      position: relative; }
-      @media (min-width: 1200px) {
-        .Gallery .gallery_title .category {
-          font-weight: 100;
-          font-size: 20px;
-          margin: 70px 0; } }
-      .Gallery .gallery_title .category:before {
-        content: "";
-        position: absolute;
-        bottom: -3px;
-        left: 0;
-        display: block;
-        border-bottom: 1px solid #827864;
-        width: 100%; }
-  .Gallery .grid {
-    max-width: 1400px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 100px);
-    grid-gap: 0.5em;
-    grid-template-areas: "img_nat_2 img_nat_1" "img_nat_2 img_nat_3" "img_nat_4 img_nat_5" "img_nat_7 img_nat_6" "img_nat_8 img_nat_6" "img_nat_9 img_nat_10"; }
-    @media (min-width: 768px) {
-      .Gallery .grid {
-        grid-template-columns: repeat(4, 25%);
-        grid-template-rows: repeat(3, 200px);
-        grid-template-areas: "img_nat_2 img_nat_2 img_nat_1 img_nat_1" "img_nat_2 img_nat_2 img_nat_1 img_nat_1" "img_nat_2 img_nat_2 img_nat_3 img_nat_4" "img_nat_5 img_nat_6 img_nat_6 img_nat_7" "img_nat_8 img_nat_6 img_nat_6 img_nat_9" "img_nat_10 img_nat_10 img_nat_10 img_nat_10"; } }
-    @media (min-width: 1200px) {
-      .Gallery .grid {
-        grid-gap: 0.7em;
-        grid-template-columns: repeat(4, 25%);
-        grid-template-rows: repeat(5, 220px) 350px;
-        grid-template-areas: "img_nat_2 img_nat_2 img_nat_1 img_nat_1" "img_nat_2 img_nat_2 img_nat_1 img_nat_1" "img_nat_2 img_nat_2 img_nat_3 img_nat_4" "img_nat_5 img_nat_7 img_nat_6 img_nat_6" "img_nat_8 img_nat_9 img_nat_6 img_nat_6" "img_nat_10 img_nat_10 img_nat_6 img_nat_6"; } }
-    .Gallery .grid #image_nature_1 {
-      grid-area: img_nat_1; }
-    .Gallery .grid #image_nature_2 {
-      grid-area: img_nat_2; }
-    .Gallery .grid #image_nature_3 {
-      grid-area: img_nat_3; }
-    .Gallery .grid #image_nature_4 {
-      grid-area: img_nat_4; }
-    .Gallery .grid #image_nature_5 {
-      grid-area: img_nat_5; }
-    .Gallery .grid #image_nature_6 {
-      grid-area: img_nat_6; }
-    .Gallery .grid #image_nature_7 {
-      grid-area: img_nat_7; }
-    .Gallery .grid #image_nature_8 {
-      grid-area: img_nat_8; }
-    .Gallery .grid #image_nature_9 {
-      grid-area: img_nat_9; }
-    .Gallery .grid #image_nature_10 {
-      grid-area: img_nat_10; }
-    .Gallery .grid .gallery__item {
-      cursor: pointer; }
-      .Gallery .grid .gallery__item .gallery__img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover; }
+
+.Gallery .gallery_options .img_center .gallery_options_item_description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5% 15%; }
+
+@keyframes svgAnimation {
+  0% {
+    stroke-dashoffset: 0;
+    stroke: #8ED18A; }
+  80% {
+    stroke-dashoffset: 1765;
+    stroke: #8ED18A;
+    fill: transparent; }
+  100% {
+    stroke-dashoffset: 1765;
+    stroke: #8ED18A;
+    fill: #8ED18A; } }
