--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -3,104 +3,126 @@
 
 .Gallery{
     margin-top: 50px;
-    padding: 10%;
     color: color(mainText);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
     .gallery_title{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
         h1{
             font-family: 'Cormorant Infant', serif;
-            font-weight: 300;
-            font-size: 40px;
+            font-weight: bold;
+            font-size: 80px;
             text-transform: uppercase;
             @include desktop(){
                 font-size: 65px;
             }
         }
-        .category{
-            margin: 40px 0;
-            font-family: 'Arimo', sans-serif;
-            text-transform: uppercase;
-            position: relative;
-
-            @include desktop(){
-                font-weight: 100;
-                font-size: 20px;
-                margin: 70px 0;
-            }
-
-            &:before {
-                content: "";
-                position: absolute;
-                bottom: -3px;
-                left: 0;
-                display: block;
-                border-bottom:1px solid color(mainText);
+        
+    }
+    .gallery_options{
+        &_item{
+            margin-top: 40px;
+            // border:1px solid red;
+            overflow: hidden;
+            &_container_img{
                 width: 100%;
+                height: 250px;
+                overflow: hidden;
+                position: relative;
+                cursor: pointer;
+                .gallery_bg_img{
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    background-position: center center;                          
+                    height: 100%;
+                    width: 100%;
+                    transition: filter,transform 0.7s;
+                }
+                &:hover{
+                    .gallery_bg_img{
+                        filter: grayscale(100%);
+                        transform: scale(1.1);
+                    }
+                    .show_gallery{
+                        path{
+                            animation: svgAnimation 0.7s linear forwards;
+                        } 
+                    }
+                }
+                .gallery_bg_volcan{
+                    background-image: url('../../Assets/images/gallery/volcan.jpg') ;                                   
+                }
+                .gallery_bg_people{
+                    background-image: url('../../Assets/images/gallery/people.jpg') ;               
+                }
+                .gallery_bg_street{
+                    background-image: url('../../Assets/images/gallery/palacio.jpg') ;               
+                }
+
+                .show_gallery{
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%,-50%);                                 
+                    svg{
+                        width: 100px;
+                        height: 100px;
+                        position: absolute;
+                        left: 50%;
+                        top: 50%;
+                        transform: translate(-50%,-50%)
+                        
+                    }
+                    path {                        
+                        fill: transparent;
+                        stroke-width: 10;
+                        stroke: none;
+                        stroke-dasharray: 1765;
+                        stroke-dashoffset: 0;
+                    }
+                }                                    
+            }
+            &_description{
+                padding: 5%;
+                .title{
+                    color:black;
+                    
+                }
             }
         }
-    }
-
-    .grid{
-        max-width: 1400px;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, 100px);
-        grid-gap: 0.5em;
-        grid-template-areas: 
-            "img_nat_2 img_nat_1"
-            "img_nat_2 img_nat_3"
-            "img_nat_4 img_nat_5"
-            "img_nat_7 img_nat_6"
-            "img_nat_8 img_nat_6"
-            "img_nat_9 img_nat_10";
-
-        @include tablet() {
-            grid-template-columns: repeat(4, 25%);
-            grid-template-rows: repeat(3, 200px);
-            // grid-gap: 0.7em;
-            grid-template-areas: 
-                "img_nat_2 img_nat_2 img_nat_1 img_nat_1"
-                "img_nat_2 img_nat_2 img_nat_1 img_nat_1"
-                "img_nat_2 img_nat_2 img_nat_3 img_nat_4"
-                "img_nat_5 img_nat_6 img_nat_6 img_nat_7"
-                "img_nat_8 img_nat_6 img_nat_6 img_nat_9"
-                "img_nat_10 img_nat_10 img_nat_10 img_nat_10";
-        }   
-        @include desktop() {
-            grid-gap: 0.7em;
-            grid-template-columns: repeat(4, 25%);
-            grid-template-rows: repeat(5, 220px) 350px;
-            grid-template-areas: 
-                "img_nat_2 img_nat_2 img_nat_1 img_nat_1"
-                "img_nat_2 img_nat_2 img_nat_1 img_nat_1"
-                "img_nat_2 img_nat_2 img_nat_3 img_nat_4"
-                "img_nat_5 img_nat_7 img_nat_6 img_nat_6"
-                "img_nat_8 img_nat_9 img_nat_6 img_nat_6"
-                "img_nat_10 img_nat_10 img_nat_6 img_nat_6";
-        }  
         
-
-
-
-        @for $i from 1 through 10 {
-            #image_nature_#{$i}{
-                grid-area: img_nat_#{$i};
-            }            
-          }
-          .gallery__item{
-              cursor: pointer;
-            .gallery__img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
+        .img_center{
+            .gallery_options_item_container_img{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
             }
-          }
+            .gallery_options_item_description{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 5% 15%;
+            }
+        }
+
     }
+}
+
+
+@keyframes svgAnimation{
+
+    0%{
+       stroke-dashoffset: 0; 
+       stroke: color(color3);
+    }
+    80%{
+        stroke-dashoffset: 1765; 
+       stroke: color(color3);
+       fill: transparent;
+
+
+     }
+     100%{
+        stroke-dashoffset: 1765; 
+        stroke: color(color3);
+        fill: color(color3);
+     }
 }
