--- a/src/components/GalleryItems/GalleryItems.scss
+++ b/src/components/GalleryItems/GalleryItems.scss
@@ -2,8 +2,7 @@
 @import "../../Assets/css/resolutions";
 
 .GalleryItems{
-    margin-top: 50px;
-    padding: 10%;
+    padding: 0 10%;
     color: color(mainText);
     display: flex;
     flex-direction: column;
