--- a/src/components/GalleryItems/GalleryItems.scss
+++ b/src/components/GalleryItems/GalleryItems.scss
@@ -15,6 +15,61 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(6, 100px);
         grid-gap: 0.5em;
+          
+        
+
+
+
+        @for $i from 1 through 10 {
+            #image_nature_#{$i}{
+                grid-area: img_nat_#{$i};
+            }            
+          }
+          .gallery__item{
+              cursor: pointer;
+            .gallery__img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+          }
+    }
+    .nature{
+        grid-template-areas: 
+            "img_nat_1 img_nat_2"
+            "img_nat_1 img_nat_3"
+            "img_nat_4 img_nat_5"
+            "img_nat_6 img_nat_10"
+            "img_nat_7 img_nat_10"
+            "img_nat_8 img_nat_9";
+
+        @include tablet() {
+            grid-template-columns: repeat(4, 25%);
+            grid-template-rows: repeat(6, 200px);
+            // grid-gap: 0.7em;
+            grid-template-areas: 
+                "img_nat_10 img_nat_10 img_nat_1 img_nat_1"
+                "img_nat_10 img_nat_10 img_nat_1 img_nat_1"
+                "img_nat_10 img_nat_10 img_nat_5 img_nat_3"
+                "img_nat_4 img_nat_9 img_nat_9 img_nat_2"
+                "img_nat_8 img_nat_9 img_nat_9 img_nat_6"
+                "img_nat_7 img_nat_7 img_nat_7 img_nat_7";
+
+        }   
+        @include desktop() {
+            grid-gap: 0.7em;
+            grid-template-columns: repeat(4, 25%);
+            grid-template-rows: repeat(5, 320px) 250px;
+            grid-template-areas: 
+                "img_nat_1 img_nat_1 img_nat_1 img_nat_4"
+                "img_nat_1 img_nat_1 img_nat_1 img_nat_6"
+                "img_nat_7 img_nat_7 img_nat_7 img_nat_7"
+                "img_nat_5 img_nat_5 img_nat_10 img_nat_10"
+                "img_nat_9 img_nat_3 img_nat_10 img_nat_10"
+                "img_nat_8 img_nat_2 img_nat_10 img_nat_10";
+        }
+    }
+    .people{
         grid-template-areas: 
             "img_nat_2 img_nat_1"
             "img_nat_2 img_nat_3"
@@ -46,23 +101,39 @@
                 "img_nat_5 img_nat_7 img_nat_6 img_nat_6"
                 "img_nat_8 img_nat_9 img_nat_6 img_nat_6"
                 "img_nat_10 img_nat_10 img_nat_6 img_nat_6";
-        }  
-        
+        }
+    }
+    .street{
+        grid-template-areas: 
+            "img_nat_1 img_nat_2"
+            "img_nat_1 img_nat_3"
+            "img_nat_4 img_nat_5"
+            "img_nat_7 img_nat_10"
+            "img_nat_8 img_nat_10"
+            "img_nat_9 img_nat_6";
 
-
-
-        @for $i from 1 through 10 {
-            #image_nature_#{$i}{
-                grid-area: img_nat_#{$i};
-            }            
-          }
-          .gallery__item{
-              cursor: pointer;
-            .gallery__img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-          }
+        @include tablet() {
+            grid-template-columns: repeat(4, 25%);
+            grid-template-rows: repeat(3, 180px) 100px 100px;
+            // grid-gap: 0.7em;
+            grid-template-areas: 
+                "img_nat_1 img_nat_1 img_nat_2 img_nat_3"
+                "img_nat_1 img_nat_1 img_nat_6 img_nat_6"
+                "img_nat_1 img_nat_1 img_nat_4 img_nat_5"
+                "img_nat_8 img_nat_7 img_nat_7 img_nat_9"
+                "img_nat_8 img_nat_7 img_nat_7 img_nat_9"
+        }   
+        @include desktop() {
+            grid-gap: 0.7em;
+            grid-template-columns: repeat(4, 25%);
+            grid-template-rows: repeat(5, 180px) 350px;
+            grid-template-areas: 
+                "img_nat_1 img_nat_1 img_nat_7 img_nat_7"
+                "img_nat_1 img_nat_1 img_nat_7 img_nat_7"
+                "img_nat_1 img_nat_1 img_nat_3 img_nat_4"
+                "img_nat_5 img_nat_2 img_nat_10 img_nat_10"
+                "img_nat_8 img_nat_9 img_nat_10 img_nat_10"
+                "img_nat_6 img_nat_6 img_nat_10 img_nat_10";
+        }
     }
 }
