footer and small changes

--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -2,7 +2,7 @@
 @import "../../Assets/css/resolutions";
 
 .Gallery{
-    margin-top: 50px;
+    margin-top: 35vh;
     color: color(mainText);
     display: flex;    
     flex-direction: column;    
