--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -2,10 +2,10 @@
 @import "../../Assets/css/resolutions";
 
 .contact{
-    
-    padding: 10%;
+    background-color: color(color3);
+    padding: 25vh 10%  10vh 10%;
     @include tablet{
-        padding: 0% 20%;
+        padding: 20vh 20%;
     }
 
     .mail_container{
@@ -16,13 +16,13 @@
             flex-direction: row;
         }
         .contact_message{
-            background-color: color(color2);
+            background-color: color(color4);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             width: 100%;
-            min-height: 450px;
+            min-height: 300px;
             span:nth-child(1), span:nth-child(3){
                 font-family: 'Arimo', sans-serif;
                 font-size: 27px;
@@ -41,7 +41,7 @@
             justify-content: center;
             align-items: center;
             @include desktop{
-                border:2px solid #dedbd4;                            
+                border:2px solid white;                            
             }
             form{
                 font-family: 'Arimo', sans-serif;
@@ -51,15 +51,15 @@
                 flex-direction: column;
                 width: 100%;
                 input::placeholder{
-                    color:color(mainText);
+                    color:white;
                 }
                 .inputDataCustomer{
                     font-size: 17px;
                     background: none;
                     border:none;
                     cursor: text;
-                    color: color(mainText);
-                    border-bottom: 2px solid color(mainText);
+                    color: white;
+                    border-bottom: 2px solid white;
                     padding:10px;
                     margin-bottom: 15px;
                     outline: none;
@@ -70,8 +70,8 @@
                 textarea{
                     font-size: 17px;
                     background: none;
-                    border:2px solid color(mainText);
-                    color: color(mainText);
+                    border:2px solid white;
+                    color: white;
                     max-width: 450px;                
                     outline: none;
                     padding: 10px;
@@ -80,14 +80,14 @@
                     margin-bottom: 30px;
                 }
                 textarea::placeholder{
-                    color:color(mainText);
+                    color:white;
                 }
                 .submitBtn{
                     background: none;
-                    color: color(mainText);
+                    color: white;
                     padding: 10px 35px;
                     border-radius: 5px;
-                    border:2px solid color(mainText);
+                    border:2px solid white;
                     outline: none;
                     cursor: pointer;
                 }
@@ -96,12 +96,14 @@
         }
     }
     .whatssapp{
-        background-color: #50B560;
+        background-color: color(color3);
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 30px 0;
-        margin-top: 50px;
+        margin-top: 20px;
+        // border:2px solid white;
+        // border-radius: 100px;
         .link{
             display: flex;
             align-items: center;
